--- a/projects/client/.env.production
+++ b/projects/client/.env.production
@@ -1,2 +1,2 @@
 PORT=8203
-REACT_APP_API_BASE_URL=https://jcwd220203.purwadhikabootcamp.com
+REACT_APP_API_BASE_URL=https://jcwd220203.purwadhikabootcamp.com/api
