--- a/projects/client/.env.production
+++ b/projects/client/.env.production
@@ -1,2 +1,4 @@
 PORT=8203
 REACT_APP_API_BASE_URL=https://jcwd220203.purwadhikabootcamp.com/api
+REACT_APP_CLIENT_ID=551516387346-2skc8ac82egk828q4agk7htffth1iiga.apps.googleusercontent.com
+REACT_APP_APP_ID=3125096074449200
